--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "grpc-tools": "^1.12.4",
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "dev": "npx tsc && node bin/index.js"
+    "dev": "npx tsc && node bin/index.js",
+    "grpc:generate": "node_modules/.bin/grpc_tools_node_protoc --js_out=import_style=commonjs,binary:./src/ --grpc_out=grpc_js:./src/ ./protos/arcctlpulumi.proto",
+    "grpc:generate-ts": "npx protoc --plugin=protoc-gen-ts=./node_modules/.bin/protoc-gen-ts --ts_out=grpc_js:./src/ ./protos/arcctlpulumi.proto"
   },
   "main": "src/index.js",
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "@grpc/grpc-js": "^1.9.1",
+    "@grpc/grpc-js-xds": "^1.9.0",
+    "@grpc/proto-loader": "^0.7.9",
+    "dotenv": "^16.3.1",
+    "google-protobuf": "^3.21.2",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
+    "protoc": "^1.1.3"
   }
 }
