--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
     "grpc-tools": "^1.12.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "ts-proto": "^1.156.7",
     "typescript": "^5.1.6"
   },
   "scripts": {
     "dev": "nodemon",
-    "grpc:generate": "./proto/build.sh"
+    "start": "ts-node --transpileOnly ./src/index.ts",
+    "grpc:generate": "sh ./proto/build.sh"
   },
   "main": "src/index.js",
   "dependencies": {
     "@grpc/grpc-js": "^1.9.1",
     "@grpc/grpc-js-xds": "^1.9.0",
-    "@grpc/proto-loader": "^0.7.9",
-    "dotenv": "^16.3.1",
     "google-protobuf": "^3.21.2",
-    "grpc_tools_node_protoc_ts": "^5.3.3",
     "protoc": "^1.1.3"
   }
 }
