--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "grpc-tools": "^1.12.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "dev": "nodemon",
     "start": "ts-node --transpileOnly ./src/index.ts",
-    "grpc:generate": "sh ./proto/build.sh"
+    "grpc:generate": "sh ./proto/build.sh",
+    "lint": "npx eslint ."
   },
   "main": "src/index.js",
   "dependencies": {
